crates/oxc-coverage-instrument/tests/snapshots/snapshot_test__switch_coverage_map.snap
---
source: tests/snapshot_test.rs
expression: result.coverage_map
---
{
  "path": "test.js",
  "statementMap": {
    "0": {
      "start": {
        "line": 1,
        "column": 0
      },
      "end": {
        "line": 5,
        "column": 1
      }
    },
    "1": {
      "start": {
        "line": 2,
        "column": 10
      },
      "end": {
        "line": 2,
        "column": 20
      }
    },
    "2": {
      "start": {
        "line": 2,
        "column": 21
      },
      "end": {
        "line": 2,
        "column": 27
      }
    },
    "3": {
      "start": {
        "line": 3,
        "column": 10
      },
      "end": {
        "line": 3,
        "column": 20
      }
    },
    "4": {
      "start": {
        "line": 3,
        "column": 21
      },
      "end": {
        "line": 3,
        "column": 27
      }
    },
    "5": {
      "start": {
        "line": 4,
        "column": 11
      },
      "end": {
        "line": 4,
        "column": 23
      }
    }
  },
  "fnMap": {},
  "branchMap": {
    "0": {
      "loc": {
        "start": {
          "line": 1,
          "column": 0
        },
        "end": {
          "line": 5,
          "column": 1
        }
      },
      "line": 1,
      "type": "switch",
      "locations": [
        {
          "start": {
            "line": 2,
            "column": 2
          },
          "end": {
            "line": 2,
            "column": 27
          }
        },
        {
          "start": {
            "line": 3,
            "column": 2
          },
          "end": {
            "line": 3,
            "column": 27
          }
        },
        {
          "start": {
            "line": 4,
            "column": 2
          },
          "end": {
            "line": 4,
            "column": 23
          }
        }
      ]
    }
  },
  "s": {
    "0": 0,
    "1": 0,
    "2": 0,
    "3": 0,
    "4": 0,
    "5": 0
  },
  "f": {},
  "b": {
    "0": [
      0,
      0,
      0
    ]
  }
}
