crates/oxc-coverage-instrument/tests/snapshots/snapshot_test__ternary_code.snap
---
source: tests/snapshot_test.rs
expression: code_without_preamble(&result.code)
---
const x = (++cov_18ab365425.s[0], condition ? (++cov_18ab365425.b[0][0], "yes") : (++cov_18ab365425.b[0][1], "no"));
